# analize_data_llm

./: .env-template  README.md  main.py  otchet.txt  pyproject.toml
config_data/: config.py
db/: add_data_to_db.py  models.py  work_db.py
llm_api/: gigachat_api.py
parser/: import_data.py
